sistem crud untuk admin

--- a/src/user/login.html
+++ b/src/user/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="../css/gateaway.css">
+    <link rel="stylesheet" href="../../css/gateaway.css">
 </head>
 <body>
     <div class="form-container">
@@ -17,7 +17,7 @@
                 <input type="password" class="form-input" placeholder="Password" name="password" required>
             </div>
             <div class="form-actions">
-                <a href="registrasi.html">REGIS DULU TOD</a>
+                <a href="registrasi.html" class="forgot-password">Registrasi Dulu!</a>
                 <a href="#" class="forgot-password">Forgot Password</a>
             </div>
             <button type="submit" class="submit-button">Login</button>
