--- a/src/user/registrasi.html
+++ b/src/user/registrasi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Form</title>
-    <link rel="stylesheet" href="../css/gateaway.css">
+    <link rel="stylesheet" href="../../css/gateaway.css">
 </head>
 <body>
     <div class="form-container">
@@ -20,7 +20,7 @@
                 <input type="password" class="form-input" placeholder="Confirm your password" name="password" required>
             </div>
             <button type="submit" class="submit-button">Register</button>
-            <a href="login.html">Login disini jika sudah regis ya tod</a>
+            <a href="login.html" class="forgot-password">Login disini!!</a>
         </form>
     </div>
 </body>
