nambah profile.php

--- a/src/user/register.html
+++ b/src/user/register.html
@@ -21,7 +21,7 @@
                 <!-- <p>Hai, silahkan masukan akun staff anda</p> -->
             </div>
             
-            <form action="login.php" method="POST">
+            <form action="register.php" method="POST">
                 <div class="input-group">
                     <i class="fas fa-envelope"></i>
                     <input type="email" name="email" placeholder="Email" required>
