27 April, proyek nganggur

--- a/src/user/login.html
+++ b/src/user/login.html
@@ -24,12 +24,12 @@
             <form action="login.php" method="POST">
                 <div class="input-group">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" name="email" name="email_admin" placeholder="Email" required>
+                    <input type="text" name="nama" placeholder="username" required>
                 </div>
                 
                 <div class="input-group">
                     <i class="fas fa-lock"></i>
-                    <input type="password" name="password" name="password_admin"  placeholder="Password" required>
+                    <input type="password" name="password" placeholder="Password" required>
                 </div>
                 
                 <button type="submit" class="login-btn">Log in</button>
