--- a/src/user/register.html
+++ b/src/user/register.html
@@ -24,7 +24,7 @@
             <form action="register.php" method="POST">
                 <div class="input-group">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="nama" placeholder="Username" required>
                 </div>
                 
                 <div class="input-group">
